--- a/src/component/TodoData/TodoData.css
+++ b/src/component/TodoData/TodoData.css
@@ -1,3 +1,8 @@
 .TodoData{
-    background-color: rgb(227, 242, 200);
+    border: 5px solid #96dae4;
+    border-radius: 2ch;
+    margin: 20px;
+    padding: 20px;
+    justify-items: center;
+    align-items: center;
 }
